kubernetes/rabbitmq/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: "appmfo.mfolabs.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
